--- a/actRath.html
+++ b/actRath.html
@@ -208,7 +208,7 @@
 						<p class="card-text"><b>Ballinacor Boxing Club Kirikee</b></p>
 						<p class="card-text"><i>Kirikee Hall, Kirikee, Glenmalure, Co. Wicklow, A67 W586</i></p>
 						<p class="card-text"><a href="tel:+353852490643" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 085 249 0643</p>
-						<a href="https://www.facebook.com/groups/245208359020984/user/61560749935268" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/profile.php?id=61560749935268" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;						
 						<a href="https://www.instagram.com/ballinacorbc_/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>		
 					</div>
 				</div>
@@ -285,7 +285,6 @@
 						<p class="card-text"><i>RDA Hall, Fairgreen, Rathdrum, Co. Wicklow, A67 X668 &#38; Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
 						<p class="card-text"><a href="mailto:niamh.roisin.crilly@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: niamh.roisin.crilly@gmail.com</p>
 						<a href="https://www.niamhcrillypilates.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/groups/245208359020984/user/61550198121851/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/niamh.crilly.pilates/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
@@ -406,7 +405,7 @@
 						<p class="card-text"><b>Elevation School of Performing Arts </b></p>
 						<p class="card-text"><a href="mailto:elevationdance@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: elevationdance@gmail.com</p>
 						<a href="http://www.elevationschoolofperformingarts.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/elevationschoolofperformingarts" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<!--<a href="https://www.facebook.com/elevationschoolofperformingarts" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp; -->
 						<a href="https://www.instagram.com/elevationdance/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
@@ -566,6 +565,20 @@
 					</div>
 				</div>
 			</div>  <!-- End card deck x 3 -->
+			<div class="card-deck" style="padding: 0.5rem;">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Wicklow Way Academy of Music &#38; Arts</b></p>
+						<p class="card-text"><i>Brockagh Resource Centre, Laragh, Glendalough, Co. Wicklow, A98 D3H1</i></p>
+						<p class="card-text"><a href="tel:+871739080" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 1739080</p>
+						<p class="card-text"><a href="mailto:hello@ellavoice.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: hello@ellavoice.com</p>
+					</div>
+				</div>
+				<div class="card border-0">
+				</div>
+				<div class="card border-0">
+				</div>
+			</div>        <!-- End card deck x 3 -->
 		</div>  <!-- End Section -->
   
 		<!--Spacer -->
