--- a/commRath.html
+++ b/commRath.html
@@ -82,6 +82,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Christmas Festival</b></p>
+						<p class="card-text"><a href="mailto:rathdrumchristmaslights@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumchristmaslights@gmail.com</p>
 						<a href="https://www.facebook.com/rathdrumchristmaslight" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
@@ -247,8 +248,13 @@
 					</div>
 				</div>
 			</div>  <!-- End card deck x 3 -->
-	  
 			<div class="card-deck" style="padding: 0.5rem;">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>John Tate's Charity</b><br><i>(Assistance to third-level students through interest-free loans)</i></p>
+						<a href="https://www.wicklow.ie/Living/Services/Arts-Heritage-Archives/Archives/Collections/Archives-Publications-Projects/-John-Tates-Charity-Archival-Collection" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>			
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Citizens Information Centre</b></p>
@@ -257,16 +263,6 @@
 						<p class="card-text"><a href="mailto:arklow@citinfo.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: arklow@citinfo.ie&nbsp;&nbsp;
 						<a href="https://centres.citizensinformation.ie/centre.php?cic=Arklow+CIC" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Arklow</p>
 						<a href="https://centres.citizensinformation.ie/centre.php?cic=Virtual+CIC+in+Wicklow+Town+Library" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Virtual CIC in Wicklow Town Library
-					</div>
-				</div>
-				<div class="card bg-dark text-white">
-					<div class="card-body">
-						<p class="card-text"><b>Wicklow Travellers Group</b></p>
-						<p class="card-text">C.E.A.R.T., Crinion Park, Wicklow Town, Co. Wicklow, A67 AR20</p>
-						<p class="card-text"><a href="tel:+353834428130" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 083 442 8130</p>
-						<p class="card-text"><a href="mailto:info@wicklowtravellersgroup.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@wicklowtravellersgroup.ie</p>
-						<a href="http://wicklowtravellersgroup.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/wicklowtravellersgroup" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
@@ -292,19 +288,29 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Wicklow Travellers Group</b></p>
+						<p class="card-text">C.E.A.R.T., Crinion Park, Wicklow Town, Co. Wicklow, A67 AR20</p>
+						<p class="card-text"><a href="tel:+353834428130" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 083 442 8130</p>
+						<p class="card-text"><a href="mailto:info@wicklowtravellersgroup.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@wicklowtravellersgroup.ie</p>
+						<a href="http://wicklowtravellersgroup.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/wicklowtravellersgroup" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Mental Health Supports and Services</b></p>
 						<a href="https://www2.hse.ie/mental-health/services-support/supports-services/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+			</div>        <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Alcoholics Anonymous</b></p>
 						<a href="https://www.alcoholicsanonymous.ie/find-meeting/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-			</div>        <!-- End card deck x 3 -->
-			
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Addiction Helplines and Information</b></p>
@@ -322,6 +328,9 @@
 						<a href="https://x.com/RespondHousing" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+			</div>        <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Fáilte Isteach</b><br><i>(Community project involving volunteers welcoming migrants through conversational English classes.)</i></p>
@@ -332,13 +341,10 @@
 						<a href="https://www.facebook.com/thirdagefailteisteach" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-
-			</div>        <!-- End card deck x 3 -->
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum and Ukraine Together</b></p>
-						<a href="https://www.facebook.com/profile.php?id=100090130844060#" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;  
+						<a href="https://www.facebook.com/groups/787279257984036/user/100090130844060" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;  
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
@@ -352,6 +358,9 @@
 						<a href="https://www.instagram.com/ukrainianhubpalyanytsya/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+			</div> <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>County Wicklow Community Partnership</b></p>
@@ -364,10 +373,6 @@
 						<a href="https://x.com/wicklowpship" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
-
-			</div> <!-- End card deck x 3 -->
-			
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Local Enterprise Office Wicklow</b></p>
@@ -390,8 +395,6 @@
 						<a href="https://countywicklowppn.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/CWPPN/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 			</div>  <!-- End Section -->
 
