--- a/infoRath.html
+++ b/infoRath.html
@@ -116,6 +116,8 @@
 					<div class="card-body">
 						<p class="card-text"><b>Town Traffic Warning:</b><br>Driving through the town centre can be tricky at times, especially as the Main Street narrows in the middle.  Please wait and allow oncoming traffic through if it will avoid a blockage.  Note that buses and large vehicles need a wide turning circle so avoid parking near junctions; the double yellow lines and round plant pots are there for a reason.</p>
 						<p class="card-text">Please leave parking on the Main Street and Market Square for residents and those that are unable to walk far.</p>
+						<p class="card-text"><b>Rathdrum Traffic Part 8</b> - proposed plan for new one-way system in Rathdrum.  Submissions and observations should be made before 12 noon Friday 16th January 2026&nbsp;&nbsp;
+						<a href="https://www.wicklow.ie/Living/Services/Online-Consultation-Hub/Rathdrum-Traffic-Part-8" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;</p>			
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
@@ -237,7 +239,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Waste Collection & Recycling</b></p>
-						<p>Bord na Móna <a href="https://www.bnmrecycling.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>   
+						<p>AES Recycling <a href="https://www.aesrecycling.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>   
 						<p>Panda <a href="https://www.panda.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
 						<p>Information on what goes in your bin <a href="https://repak.ie/recycling#what-goes-in-my-bin" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
 					</div>
