--- a/todoRath.html
+++ b/todoRath.html
@@ -142,6 +142,7 @@
 						<p class="card-text"><b>Meeting of the Waters</b></p>
 						<p class="card-text">The Meetings, Avoca, Co. Wicklow, Y14 VW08</p>
 						<a href="https://visitwicklow.ie/listing/meeting-of-the-waters-avoca-valley/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					 	<a href="https://www.facebook.com/The.Meetings.Avoca" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
@@ -187,8 +188,8 @@
 						<p class="card-text">Beyond the Trees Avondale, Avondale House &#38; Forest Park, Avondale, Rathdrum, Co. Wicklow, A67 P303</p>
 						<p class="card-text"><a href="mailto:bookings@wicklowonice.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: bookings@wicklowonice.ie</p>
 						<a href="https://wicklowonice.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<!--<a href="h" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="h" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;-->
+						<a href="https://www.facebook.com/profile.php?id=61566588040258" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/wicklowonice/?igsh=MXI0Y2x2bjBwb2s1bQ%3D%3D#" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.tiktok.com/@wicklow.on.ice" target="_blank"><i class="fa-brands fa-tiktok" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
@@ -259,7 +260,7 @@
 						<p class="card-text"></p>
 						<p class="card-text">Fish Pond: 5km loop walk, mostly on footpaths starting and ending at Saville’s Cross Roundabout, through Corballis on the R752 & L2149.</p>
 						<p class="card-text"></p>
-						<p class="card-text">Jubilee Loop: 6km loop walk, mostly through Ballygannon Forest, starting and ending at Church of St. Mary &#38; St. Michael, A67 E034.&nbsp;&nbsp;
+						<p class="card-text">Jubilee Loop: 4.9km loop walk, mostly through Ballygannon Forest, starting and ending at Church of St. Mary &#38; St. Michael, A67 E034.&nbsp;&nbsp;
 						<br><i>(Please report any trail issues to Rathdrum Tidy Towns who will direct them to the relevant authority.)</i>&nbsp;&nbsp;
 						<a href="https://visitwicklow.ie/listing/jubilee-looped-walk-rathdrum/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;</p>
 						<p class="card-text">Wicklow Trails:&nbsp;&nbsp;
@@ -272,6 +273,7 @@
 					<div class="card-body">
 						<p class="card-text"><b>Bird Watching</b></p>
 						<p class="card-text">
+							<a href="https://birdwatchireland.ie/birds/pied-wagtail/" target="_blank"> <i class="fa-solid fa-crow" style="color:#FFFFFF"></i></a> Pied Wagtail,						
 							<a href="https://birdwatchireland.ie/birds/chiffchaff/" target="_blank"> <i class="fa-solid fa-crow" style="color:#FFFFFF"></i></a> Chiff Chaff,
 							<a href="https://birdwatchireland.ie/birds/willow-warbler/" target="_blank"> <i class="fa-solid fa-crow" style="color:#FFFFFF"></i></a> Willow Warbler,
 							<a href="https://birdwatchireland.ie/birds/blackcap/" target="_blank"> <i class="fa-solid fa-crow" style="color:#FFFFFF"></i></a> Blackcap,
