--- a/dirRath.html
+++ b/dirRath.html
@@ -998,7 +998,7 @@
 
     <!-- Start Post & finance section -->
     <div class="container p-1 pt-2 bg-secondary text-dark text-center">
-      <h5>Agribusiness, Building Providers, Building Services, DIY, Landscaping</h5>
+      <h5>Agribusiness, Building Providers, Building Services, DIY</h5>
     </div>
   
     <div class="container">
@@ -1182,7 +1182,7 @@
 	
     <!-- Start Landscaping secion -->
     <div class="container p-1 pt-2 bg-secondary text-dark text-center">
-      <h5>Garden Centres, Landscapers, Christmas Trees &#38; Wreaths</h5>
+      <h5>Garden Centres, Landscaping, Christmas Trees &#38; Wreaths</h5>
     </div>
   
     <div class="container">
