--- a/commRath.html
+++ b/commRath.html
@@ -330,7 +330,28 @@
 				</div>
 			</div>        <!-- End card deck x 3 -->
 			
+			
 			<div class="card-deck" style="padding: 0.5rem;">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Circle Voluntary Housing Association</b></p>
+						<p class="card-text">Circle VHA, Phoenix House, 32-34 Castle Street, Dublin 2</p>
+						<p class="card-text"><a href="tel:+35314072110" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 01 407 2110</p>
+						<p class="card-text"><a href="mailto:info@circlevha.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@circlevha.ie</p>
+						<a href="https://circlevha.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Tuath Housing</b></p>
+						<p class="card-text">33 Leeson Street Lower, Dublin 2, Co. Dublin, D02 KD68</p>
+						<p class="card-text"><a href="tel:+3531800852751" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 1800 852 751</p>
+						<p class="card-text"><a href="mailto:customerservice@tuathhousing.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: customerservice@tuathhousing.ie</p>
+						<a href="https://tuathhousing.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/TuathHousingAssociationLtd" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/tuath_housingassociation" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Fáilte Isteach</b><br><i>(Community project involving volunteers welcoming migrants through conversational English classes.)</i></p>
@@ -341,6 +362,9 @@
 						<a href="https://www.facebook.com/thirdagefailteisteach" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+			</div>        <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum and Ukraine Together</b></p>
@@ -358,9 +382,6 @@
 						<a href="https://www.instagram.com/ukrainianhubpalyanytsya/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-			</div> <!-- End card deck x 3 -->
-			
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>County Wicklow Community Partnership</b></p>
@@ -373,6 +394,9 @@
 						<a href="https://x.com/wicklowpship" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
+			</div> <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Local Enterprise Office Wicklow</b></p>
@@ -395,6 +419,8 @@
 						<a href="https://countywicklowppn.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/CWPPN/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
+				</div>
+				<div class="card border-0">
 				</div>
 			</div>  <!-- End Section -->
 
