--- a/newsRath.html
+++ b/newsRath.html
@@ -302,6 +302,16 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
+							<img class="card-img-top" src="images/2025_hist_ParnellDavitt.jpg" alt="Hist">	
+							<p class="card-text"><b>Rathdrum Historical Society - The Relationship Between Parnell And Michael Davitt</b></p>
+							<p class="card-text">A talk on "The relationship between Parnell and Michael Davitt" presented by Carla King, a recognised authority on Michael Davitt and a well-known historian.  Admission €5 per person.  All welcome.</p>
+							<p class="card-text">Monday 1 December 2025 at 8pm</p>
+							<p class="card-text"><i>Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
+							<a href="https://www.facebook.com/RathdrumHistoricalSociety/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
 							<img class="card-img-top" src="images/2025_clissman_xmas.jpeg" alt="Clissman Santa">					
 							<p class="card-text"><b>Santa's Winter Wonderland</b></p>
 							<p class="card-text">Saturday 6 December - Tuesday 23 December 2025</p>
@@ -327,6 +337,9 @@
 							<a href="https://x.com/RathdrumRFC" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->	
+				
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<p class="card-text"><b>Clara LGFA - AGM</b></p>
@@ -336,10 +349,7 @@
 							<a href="https://www.facebook.com/claraladiesgaa/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.instagram.com/claraladies/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
-				</div>
-				</div>        <!-- End card deck x 3 -->	
-				
-				<div class="card-deck" style="padding: 0.5rem;">
+					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_scoutQuiz.jpeg" alt="scoutQuiz">
@@ -358,8 +368,6 @@
 							<p class="card-text"><a href="tel:+353872928660" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 292 8660</p>
 							<p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 						</div>
-					</div>
-					<div class="card border-0">
 					</div>
 				</div>        <!-- End card deck x 3 -->			
 			</div><!-- End section -->
