--- a/infoRath.html
+++ b/infoRath.html
@@ -35,6 +35,7 @@
 			<a class="btn btn-dark" href="commRath.html" role="button">Community</a>
 			<a class="btn btn-light" href="infoRath.html" role="button">Information</a>
 			<a class="btn btn-dark" href="newsRath.html" role="button">News &#38; Events</a>
+			<a class="btn btn-dark" href="invest.html" role="button">Invest</a>
 			<a class="btn btn-dark" href="contactRath.html" role="button">Contact</a>
 		</div>
 	</div>
