--- a/newsRath.html
+++ b/newsRath.html
@@ -303,9 +303,9 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<img class="card-img-top" src="images/2025_cancerCraft.jpg" alt="CancerCraft">
+							<img class="card-img-top" src="images/2025_cancerCraft2.jpg" alt="CancerCraft">
 							<p class="card-text"><b>Rathdrum Cancer Support Group - Christmas Crafts Sale</b></p>
-							<p class="card-text">Wednesday 3 December & Friday 5 December 2025, 10am to 12 noon</p>
+							<p class="card-text">Wednesday 3 December & Friday 5 December 2025, 9am to 12 noon</p>
 							<p class="card-text">The Old Library, 11 Gilbert's Row, Rathdrum, Co. Wicklow, A67 RW26</p>
 							<p class="card-text"><a href="mailto:info@rathdrumcancersupport.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@rathdrumcancersupport.com</p>
 							<a href="https://rathdrumcancersupport.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
