--- a/invest.html
+++ b/invest.html
@@ -136,12 +136,31 @@
 	
 		<div class="container">
 			<div class="card-deck" style="padding: 0.5rem;">
+
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Wicklow Way Academy of Music &#38; Arts - Now Hiring for Jan–May 2026</b></p>
+						<p class="card-text">Wicklow Way Academy of Music & Arts is expanding and we are looking for experienced/ qualified music teachers and professional musicians to join our team for the January–May 2026 term.
+						We are recruiting in the following County Wicklow areas: Roundwood, Laragh, Annamoe, Rathdrum, Newtownmountkennedy.</p>
+						<p class="card-text">We are seeking teachers for: (Children & Adults)
+						<li>Piano
+						<li>Guitar & Ukulele
+						<li>Voice
+						<li>Violin
+						<li>Beginner Keyboard Group Classes
+						<li>Pre-Instrumental Classes
+						<li>Tiny Treble toddler & parent sing-along
+						<li>Little Voices singing classes (ages 4–6)</p>
+						<p class="card-text">Hours: Mondays to Thursdays: 12pm – 8pm, Saturdays 11am - 4pm</p>
+						<p class="card-text">Rates: €33 per hour, €40 per hour (Mobile Music), €50–€60 per group session</p>
+						<p class="card-text">Own transport is essential.  If you’re passionate about teaching, reliable and love helping students grow in confidence, we’d love to hear from you. To apply, please send your CV and short cover note to linseydempsey@yahoo.com</i></p>
+						<p class="card-text"><a href="mailto:linseydempsey@yahoo.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a></p>
+					</div>
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Advertise local jobs here</b></p>
-						</div>
-				</div>
-				<div class="card border-0">
+					</div>
 				</div>
 				<div class="card border-0">
 				</div>
