--- a/newsRath.html
+++ b/newsRath.html
@@ -268,9 +268,9 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<!--<img class="card-img-top" src="images/2024_hound.jpg" alt="hounddogs"> -->
+							<img class="card-img-top" src="images/2025_rugbyHounds.jpg" alt="hounddogs">
 							<p class="card-text"><b>Rathdrum RFC v The Hound Dogs Charity Rugby Match</b></p>
-							<p class="card-text">St. Stephen's Day</p>
+							<p class="card-text">St. Stephen's Day, 1pm</p>
 							<p class="card-text">Rathdrum Rugby Football Club, The Ivy Leaf Grounds, Rathdrum, Co. Wicklow, A67 XO45</p>
 							<p class="card-text"><a href="mailto:rathdrumrugby@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumrugby@gmail.com</p>
 							<a href="https://www.rathdrumrfc.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -355,13 +355,15 @@
 								<a href="https://www.instagram.com/wicklowlibraries/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
-					<div class="card bg-dark text-white">
-						<div class="card-body">
-							<p class="card-text"><b>Volunteer</b></p>
-							<p class="card-text">The majority of sports clubs, activities, community and festival groups are run by volunteers.  They are always looking for new people to help out.  If you have an interest, please don’t hesitate to contact a group, every little helps.</p>
-								<p><i>(You don't know what you've got 'til it's gone)</i></p>
-						</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Breastfeeding Support Group</b></p>
+						<p class="card-text">Rathdrum Primary Care Centre, Balleese Lower, Rathdrum, Co. Wicklow, A67 KX33</p>
+						<p class="card-text">First &#38; third Tuesday of each month, enquiries to Betty Tobin PHN</p>
+						<p class="card-text"><a href="tel:+35340472050" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 72050</p>
+						<a href="https://www2.hse.ie/services/primary-care-centres/rathdrum-primary-care-centre/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
+				</div>
 				</div>
 			</div>  <!-- End section -->
 	
@@ -584,7 +586,7 @@
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<img class="card-img-top" src="images/2024_hound.jpg" alt="hounddogs">
+							<img class="card-img-top" src="images/2025_rugbyHounds.jpg" alt="hounddogs">
 							<p class="card-text"><b>Rathdrum RFC v The Hound Dogs Charity Rugby Match</b></p>
 							<p class="card-text">St. Stephen's Day</p>
 							<p class="card-text">Rathdrum Rugby Football Club, The Ivy Leaf Grounds, Rathdrum, Co. Wicklow, A67 XO45</p>
