--- a/contactRath.html
+++ b/contactRath.html
@@ -49,7 +49,9 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<p class="card-text"><h4><a href="mailto:rathdrumcowicklow@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumcowicklow@gmail.com</h4>
+							<p class="card-text"><h4><a href="mailto:rathdrumcowicklow@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumcowicklow@gmail.com&nbsp;&nbsp;&nbsp;&nbsp;
+						  <a href="https://www.facebook.com/profile.php?id=61580802164565" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.instagram.com/rathdrumcowicklow/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;</h4>
 						</div>
 					</div>
 				</div>	
