--- a/dirRath.html
+++ b/dirRath.html
@@ -1348,6 +1348,14 @@
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Countryside Canines</b></p>
+						<p class="card-text">Dog walking business based near Rathdrum</p>
+						<p class="card-text"><a href="mailto:thecountrysidecanines@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: thecountrysidecanines@gmail.com</p>
+						<a href="https://www.facebook.com/profile.php?id=61585426222671" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>NSPCA Wicklow</b></p>
 						<p class="card-text">Sharpeshill Sanctuary, Ballygannon More, Rathdrum, Co. Wicklow, A67 YK81</p>
 						<p class="card-text"><a href="tel:+35340444783" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 0404 44783</p>
@@ -1368,9 +1376,6 @@
 						<a href="https://www.facebook.com/horsewelfaretrust/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://x.com/IHWTMoscowFlyer" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-
-				<div class="card border-0">
 				</div>
 			</div>  <!-- End Section -->
 		</div>
