--- a/commRath.html
+++ b/commRath.html
@@ -330,9 +330,11 @@
 					<div class="card-body">
 						<p class="card-text"><b>Addiction Helplines and Information</b></p>
 						<a href="https://www.hse.ie/eng/services/list/5/addiction/drugshivhelpline/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					  <p class="card-text"> </p>
+						<p class="card-text"><b>Gambling Care</b></p>
+						<a href="https://gamblingcare.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-
 			</div>        <!-- End card deck x 3 -->
 			
 			
