--- a/invest.html
+++ b/invest.html
@@ -161,10 +161,35 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Advertise local jobs here</b></p>
+						<p class="card-text"><b>SMG Fitness Gym - Fitness Trainer Wanted</b></p>
+						<p class="card-text">Looking for a part time trainer to join our team at a growing local gym in Rathdrum.  This would suit someone who:
+							<ul>
+								<li>Has a genuine interest in coaching people (not just workouts)
+								<li>Is reliable, friendly, and professional
+								<li>Enjoys working with small group sessions
+								<li>Holds (or is working towards) a recognised fitness qualification
+							</ul>
+						</p>
+						<p class="card-text">Role includes:
+							<ul>
+								<li>Coaching group training sessions
+								<li>Supporting members on the gym floor
+								<li>Helping maintain a positive, welcoming gym environment
+							</ul>
+						</p>
+						<p class="card-text">Hours are part time and flexible.</p></p>
+						<p class="card-text">29 Main Street, Rathdrum, Co. Wicklow, A67 X437</p>
+						<p class="card-text"><a href="tel:+353863910193" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 391 0193</p>
+						<p class="card-text"><a href="mailto:info@smg-fitness.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@smg-fitness.com</p>
+						<a href="https://www.smgfitness.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/SMGFitnessRathdrum/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/smgfitnesshq/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
-				<div class="card border-0">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Advertise local jobs here</b></p>
+					</div>
 				</div>
 			</div>        <!-- End card deck x 3 -->
 		</div>  <!--end container -->
